--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@
 
 /public/assets
 
+# Ignore master key for decrypting credentials and more.
+/config/master.key
+
 # Ignore vendor dan ext .copy
 /vendor
 *.copy
